...
    <string name="settings_default_username">\@defaultuser</string>
    <string name="settings_label_name">Name :</string>
    <string name="settings_label_username">Username :</string>
    <string name="settings_label_birthday">Birthday date :</string>
    <string name="settings_label_school">School :</string>
    <string name="settings_label_school_year">School year :</string>
    <string name="settings_valid_username">This username is available!</string>
    <string name="settings_alert_dialog_title">Choose Photo Source</string>
    <string name="settings_alert_dialog_text">Select where to get your new profile picture.</string>
    <string name="settings_alert_dialog_option_camera">Take Photo</string>
    <string name="settings_alert_dialog_option_gallery">Choose from Gallery</string>
    <string name="settings_alert_dialog_option_cancel">Cancel</string>
    <string name="settings_label_bio">Bio :</string>
...
